--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ table {
 
 .login {
     width: 300px;
-    margin-left: 60%;
+    margin-left: 100%;
 }
 
 table thead th {
@@ -52,7 +52,7 @@ table th {
 }
 
 .login a {
-    text-decoration-line: '';
+    text-decoration-line: none;
     color: #000;
 }
 
@@ -68,6 +68,7 @@ table th {
     font-weight: bold;
     color: black;
     border: none;
+    cursor: pointer;
 
 }
 
@@ -76,7 +77,7 @@ table th {
     /* Adiciona um brilho ao redor do botão */
 }
 
-.login input[type="text"],
+.login input[type="email"],
 .login input[type="password"] {
     border: none;
     outline: none;
@@ -85,8 +86,10 @@ table th {
 
 .forgot {
     text-align: right;
+    font-size: small;
 }
 
 .signup {
     text-align: center;
+    font-size: small;
 }
